Добавлены получение главных категрий и подкатегорий по id категории в сервис и контроллер